edit the article details

--- a/src/app/admin/staff-manager/update-staff/update-staff.component.html
+++ b/src/app/admin/staff-manager/update-staff/update-staff.component.html
@@ -6,6 +6,21 @@
                 <!-- <div class="col-lg-5 d-none d-lg-block bg-register-image"></div> -->
                 <div class="col-lg-7">
                     <div class="p-5">
+                        <div class="side-bar">
+                            <div class="user-info">
+                              <!-- ẢNH NHÂN VIÊN -->
+                                <img class="img-profile img-circle img-responsive center-block" src="{{staffModel?.image}}" alt="">
+                                <ul class="meta list list-unstyled">
+                                    <!-- TÊN NHÂN VIÊN -->
+                                    <!-- <li class="name">{{staff?.name}}<br>
+                                      
+                                        <label class="label label-info" *ngIf="staff?.role == true">Admin</label>
+                                        <label class="label label-info" *ngIf="staff?.role == false">Super Admin</label>
+                                    </li> -->
+                                    <!-- <li class="email"><a href="#">hiepnguyen31899@gmail.com</a></li> -->
+                                </ul>
+                            </div>
+                        </div>
                         <div class="text-center">
                             <h1 class="h4 text-gray-900 mb-4">CẬP NHẬP THÔNG TIN NHÂN VIÊN!</h1>
                         </div>
