--- a/src/app/admin/article-manager/detail-article/detail-article.component.html
+++ b/src/app/admin/article-manager/detail-article/detail-article.component.html
@@ -5,18 +5,18 @@
             <div class="col-md-8">
                 <div
                     class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pb-2 mb-3 border-bottom">
-                    <h1 class="h2">CHI TIẾT BÀI ĐĂNG</h1>
+                    <h1>CHI TIẾT BÀI ĐĂNG</h1>
                 </div>
                 <!-- <p>"Gia hạn tin" là chức năng giúp hiển thị lại tin rao cũ bạn đã ẩn trước đó mà không cần soạn lại nội dung. Tin sau khi gia hạn sẽ hiện ở "trang danh sách tin" như một tin mới.</p> -->
                 <form class="form-horizontal frm-manage-post js-frm-manage-post" id="form_dangtin"
                     [formGroup]="articleForm">
-                    <h3>{{article?.title}}</h3>
+                    <h2 style="color: #111111;">{{article?.title}}</h2>
                     <hr />
                     <div class="row">
                         <div class="col-md-12">
                             <div class="row">
                                 <div class="col-md-12">
-                                    <h5>Địa chỉ cho thuê</h5>
+                                    <h3 style="font-size: 1.75rem; color: #111111;">Địa chỉ cho thuê</h3>
                                 </div>
                             </div>
                             <div class="row mt-3">
@@ -71,7 +71,8 @@
                                                 class="red_require">(*)</span></label>
                                         <p>Vị trí tin bài trên bản đồ
                                         </p>
-                                        <div id="maps" style="width: 100%; height: 300px; position: relative; overflow: hidden; border: 1px solid red;">
+                                        <div id="maps"
+                                            style="width: 100%; height: 300px; position: relative; overflow: hidden; border: 1px solid red;">
                                             <!-- <agm-map [zoom]="13" [latitude]="latitude" [longitude]="longitude">
                                                 <agm-marker [latitude]="latitude" [longitude]="longitude">
                                                     <agm-info-window><strong>{{article?.location.wardName}}, {{article?.location.districtName}}, {{article?.location.cityName}}</strong></agm-info-window>
@@ -84,73 +85,19 @@
 
                             <div class="form-group row mt-5">
                                 <div class="col-md-12">
-                                    <h3>Thông tin mô tả</h3>
-                                </div>
-                            </div>
-                            <div class="form-group row mt-3">
-                                <label for="post_cat" class="col-md-12 col-form-label">Loại chuyên mục</label>
-                                <div class="col-md-6">
-                                    <!-- <select class="form-control" disabled="disabled" id="post_cat"
-                                            name="loai_chuyen_muc" required=""
-                                            data-msg-required="Chưa chọn loại chuyên mục">
-                                            <option value="">-- Chọn loại chuyên mục --</option>
-                                            <option value="1" selected="&quot;selected&quot;">Phòng trọ, nhà trọ
-                                            </option>
-                                            <option value="2">Nhà thuê nguyên căn</option>
-                                            <optgroup label="Căn hộ">
-                                                <option value="3">Cho thuê căn hộ</option>
-                                                <option value="6">Cho thuê căn hộ mini</option>
-                                                <option value="7">Cho thuê căn hộ dịch vụ</option>
-                                            </optgroup>
-                                            <option value="4">Tìm người ở ghép</option>
-                                            <option value="5">Cho thuê mặt bằng</option>
-                                        </select> -->
-                                    <!-- <input type="hidden" name="loai_chuyen_muc" value="1"> -->
-                                </div>
-                            </div>
-                            <div class="form-group row">
-                                <label for="post_title" class="col-md-12 col-form-label">Tiêu đề</label>
-                                <div class="col-md-12">
-                                    <label type="text" class="form-control" name="tieu_de" id="post_title"
-                                        value="Nhà Trọ Phương Canh Giá Rẻ: 1tr2 25m2" minlength="30" maxlength="120"
-                                        required="" data-msg-required="Tiêu đề không được để trống"
-                                        data-msg-minlength="Tiêu đề quá ngắn" data-msg-maxlength="Tiêu đề quá dài"
-                                        value=""> {{article?.title}}
-                                    </label>
-                                </div>
-                            </div>
-                            <div class="form-group row">
-                                <label for="post_content" class="col-md-12 col-form-label">Nội dung mô tả</label>
-                                <div class="col-md-12">
-                                    <textarea class="form-control" name="noi_dung" id="post_content" rows="10"
-                                        required="" minlength="100" [formControlName]="'description'">
-                                        </textarea>
-                                </div>
-                            </div>
-                            <div class="form-group row">
-                                <label for="post_acreage" class="col-md-12 col-form-label">Diện tích</label>
-                                <div class="col-md-6">
-                                    <div class="input-group mb-3">
-                                        <label id="post_acreage" type="number" attern="[0-9.]+" name="dien_tich"
-                                            max="1000" value="25" class="form-control" required=""
-                                            data-msg-required="Bạn chưa nhập diện tích" tabindex="-1">
-                                            ###
-                                        </label>
-                                        <div class="input-group-append">
-                                            <span class="input-group-text">m<sup>2</sup></span>
-                                        </div>
-                                    </div>
+                                    <h3 style="font-size: 1.75rem; color: #111111;">Thông tin mô tả</h3>
                                 </div>
                             </div>
 
                             <div class="form-group row">
-                                <label for="post_acreage" class="col-md-12 col-form-label">Đối tượng</label>
-                                <div class="col-md-6">
-                                    <div class="input-group mb-3">
-                                        <label id="form-control" name="phone" class="form-control"
-                                            data-msg-required="Số điện thoại" value="0365834845" tabindex="-1">
-                                            Nam / Nữ
-                                        </label>
+                                <label for="post_content" class="col-md-12 col-form-label">Nội dung mô tả</label>
+                                <div class="col-md-12">
+                                    <div class="form-control" name="noi_dung" id="post_content"
+                                        style="height: 250px;
+                                        overflow: auto;
+                                        border: 1px solid #CCCCCC;
+                                        margin: 1em 0;" disabled>
+                                        {{article?.description}}
                                     </div>
                                 </div>
                             </div>
@@ -159,14 +106,14 @@
                             <hr />
                             <div class="form-group row mt-5">
                                 <div class="col-md-12">
-                                    <h3>Liên hệ người đăng tin</h3>
+                                    <h3 style="font-size: 1.75rem; color: #111111;">Liên hệ người đăng tin</h3>
                                 </div>
                             </div>
                             <!--  -->
                             <div class="row mt-3">
                                 <div class="col-md-4">
                                     <div class="form-group">
-                                        <label for="province_id" class="col-form-label">Email</label>
+                                        <label for="province_id" class="col-form-label">Họ tên</label>
                                         <label id="province_id" name="province_id"
                                             class="form-control js-select-tinhthanhpho select2-hidden-accessible"
                                             required="" data-msg-required="Chưa chọn Tỉnh/TP" tabindex="-1"
@@ -177,7 +124,7 @@
                                 </div>
                                 <div class="col-md-5">
                                     <div class="form-group">
-                                        <label class="col-form-label" for="district_id">Họ tên</label>
+                                        <label class="col-form-label" for="district_id">Email</label>
                                         <label name="district_id" id="district_id"
                                             class="form-control js-select-quanhuyen select2-hidden-accessible"
                                             required="" data-msg-required="Chưa chọn Quận/Huyện" tabindex="-1"
@@ -191,8 +138,7 @@
                                         <label class="col-form-label" for="phuongxa">Số điện thoại</label>
                                         <label class="form-control js-select-phuongxa select2-hidden-accessible"
                                             name="phuongxa" id="phuongxa" tabindex="-1" aria-hidden="true">
-                                            <!--  {{article?.location.wardName}} // anh đức chưa thêm sđt -->
-                                            ###
+                                            {{article?.customer.phone}}
                                         </label>
 
                                     </div>
@@ -203,7 +149,7 @@
                             <hr />
                             <div class="form-group row mt-5">
                                 <div class="col-md-12">
-                                    <h3>Bảng giá dịch vụ trong 1 tháng</h3>
+                                    <h3 style="font-size: 1.75rem; color: #111111;">Thông tin chi tiết</h3>
                                 </div>
                             </div>
 
@@ -225,6 +171,22 @@
                                 <!-- <label for="text_giachothue" id="text_giachothue"
                                         class="col-sm-12 control-label js-number-text" style="color: #0d9832;">
                                         một triệu hai trăm nghìn đồng/tháng</label> -->
+                            </div>
+
+                            <div class="form-group row">
+                                <label for="post_acreage" class="col-md-12 col-form-label">Diện tích</label>
+                                <div class="col-md-6">
+                                    <div class="input-group mb-3">
+                                        <label id="post_acreage" type="number" attern="[0-9.]+" name="dien_tich"
+                                            max="1000" value="25" class="form-control" required=""
+                                            data-msg-required="Bạn chưa nhập diện tích" tabindex="-1">
+                                            {{article?.acreage}}
+                                        </label>
+                                        <div class="input-group-append">
+                                            <span class="input-group-text">m<sup>2</sup></span>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
 
                             <div class="row mt-3">
@@ -264,29 +226,17 @@
                                     </div>
                                 </div>
                             </div>
-
-
-
-                            <!-- <div class="form-group row">
-                                    <label for="post_acreage" class="col-md-12 col-form-label">Đối tượng</label>
-                                    <div class="col-md-6">
-                                        <div class="input-group mb-3">
-                                            <select class="form-control" id="post_cat" name="doi_tuong" disabled>
-                                                <option value="Tất cả" selected="&quot;selected&quot;">Nam / Nữ</option>
-                                            </select>
-                                        </div>
-                                    </div>
-                                </div> -->
                             <hr />
                             <div class="form-group row mt-5">
                                 <div class="col-md-12">
-                                    <h3>Hình ảnh</h3>
+                                    <h3 style="font-size: 1.75rem; color: #111111;">Hình ảnh</h3>
                                 </div>
                             </div>
                             <div class="form-group row">
                                 <div class="col-md-12">
                                     <div class="list_photos row dropzone-previews" id="list-photos-dropzone-previews">
-                                        <div class="photo_item col-md-2 col-3 js-photo-manual" *ngFor="let image of article?.image; let i=index">
+                                        <div class="photo_item col-md-2 col-3 js-photo-manual"
+                                            *ngFor="let image of article?.image; let i=index">
                                             <div class="photo"><img src="{{image}}">
                                             </div>
                                             <div class="dz-progress"><span class="dz-upload"></span></div>
@@ -324,7 +274,7 @@
 
                             <div class="form-group row mt-5">
                                 <div class="col-md-12">
-                                    <h3>Video</h3>
+                                    <h3 style="font-size: 1.75rem; color: #111111;">Video</h3>
                                 </div>
                             </div>
                             <div class="form-group row">
@@ -340,12 +290,12 @@
                                     <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/BdPk9ipvczM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
                                 </div>
                             </div>
-
+                            <hr>
                             <!-- NGƯỜI Ở GHÉP -->
-                            <div *ngIf="article?.roommate?.roommateId == null" class="nguoiOghep">
+                            <div *ngIf="article?.roommate?.roommateId == null" class="nguoiOghep" style="border: 2px double #C0C0C0; padding-left: 19px;" >
                                 <div class="form-group row mt-5">
                                     <div class="col-md-12">
-                                        <h3>Bạn cùng phòng</h3>
+                                        <h3 style="font-size: 1.75rem; color: #111111;">Bạn cùng phòng</h3>
                                     </div>
                                 </div>
                                 <div class="row mt-3">
@@ -385,6 +335,7 @@
                                 </div>
                                 <hr />
                             </div>
+                            <br>
                             <hr>
                             <div class="form-group row">
                                 <button type="button" class="btn btn-success" (click)="active()">Duyệt bài</button>
@@ -392,7 +343,7 @@
                             </div>
                         </div>
                     </div>
-                    
+
                 </form>
             </div>
 
@@ -401,7 +352,7 @@
                 <div class="card">
                     <div class="card-body">
                         <h4 class="card-title">Thông tin thanh toán</h4>
-                        <table class="table table-striped" >
+                        <table class="table table-striped">
                             <tbody>
                                 <tr>
                                     <td>Bạn đang có:</td>
@@ -441,6 +392,7 @@
                     </div>
                 </div>
             </div>
+
 
             <!-- <div class="col-md-4">
                 <div class="card">
