Advertisement photo on the left, photo - staff editing, logo

--- a/src/app/admin/staff-manager/update-staff/update-staff.component.css
+++ b/src/app/admin/staff-manager/update-staff/update-staff.component.css
@@ -64,3 +64,24 @@
 
 /*  */
 
+/* add staff photo editing */
+.user-info-image{
+  width: 165px;
+  height: 212px;
+  margin-top: -223px;
+  position: relative;
+   /* top: -165px;  */
+  left: -118px;
+  top: 240px;
+  border-radius: 10px;
+}
+
+.user-info-image>input{
+  display: none;
+}
+
+.user-info-image button{
+  position: relative;
+  bottom: 160px;
+  left: 30px;
+}
