--- a/src/app/client/clients-page/client-home/client-home.component.html
+++ b/src/app/client/clients-page/client-home/client-home.component.html
@@ -224,7 +224,7 @@
         </main>
         <!-- Footer -->
         <div id="fixed_Left" class="banner_fixed" style="display: block; left: 39.5px;">
-            <a target="_blank" href="https://bds123.vn/"><img src="https://phongtro123.com/images/bds123_120_300.gif"></a>
+            <a target="_blank" href="https://bds123.vn/"><img src="https://phongtro123.com/images/ad_nhom_fb.jpg"></a>
         </div>
         <div id="fixed_Right" class="banner_fixed" style="display: block; right: 39.5px;">
             <a target="_blank"  rel="nofollow" href="http://bit.ly/nhom-phong-tro-facebook">
