--- a/src/app/admin/staff-manager/update-staff/update-staff.component.html
+++ b/src/app/admin/staff-manager/update-staff/update-staff.component.html
@@ -4,23 +4,18 @@
             <!-- Nested Row within Card Body -->
             <div class="row">
                 <!-- <div class="col-lg-5 d-none d-lg-block bg-register-image"></div> -->
-                <div class="col-lg-7">
-                    <div class="p-5">
-                        <div class="side-bar">
-                            <div class="user-info">
-                              <!-- ẢNH NHÂN VIÊN -->
-                                <img class="img-profile img-circle img-responsive center-block" src="{{staffModel?.image}}" alt="">
-                                <ul class="meta list list-unstyled">
-                                    <!-- TÊN NHÂN VIÊN -->
-                                    <!-- <li class="name">{{staff?.name}}<br>
-                                      
-                                        <label class="label label-info" *ngIf="staff?.role == true">Admin</label>
-                                        <label class="label label-info" *ngIf="staff?.role == false">Super Admin</label>
-                                    </li> -->
-                                    <!-- <li class="email"><a href="#">hiepnguyen31899@gmail.com</a></li> -->
-                                </ul>
-                            </div>
-                        </div>
+             
+                <div class="col-lg-7">               
+                    <div class="p-5">  
+                        <div class="user-info-image">
+                            <label for="file-input">
+                                <img class="user-info-image" *ngIf="staffModel?.image == null || staffModel?.image == ''" src="https://cdn.pixabay.com/photo/2016/08/08/09/17/avatar-1577909_1280.png">
+                                <img class="user-info-image" *ngIf="staffModel?.image" src="{{staffModel?.image}}">
+                                <span class="user-info-image" [ngStyle]="{'margin-left': '15px'}">Chọn lại Avatar</span>
+                            </label>
+                            <input id="file-input" type="file" (change)="getFiles($event)">
+                            <button class="btn btn-primary" (click)="uploadImage()" *ngIf="selectedFile != null">Update</button>
+                        </div>       
                         <div class="text-center">
                             <h1 class="h4 text-gray-900 mb-4">CẬP NHẬP THÔNG TIN NHÂN VIÊN!</h1>
                         </div>
