filter client, rent-room, room-mates

--- a/src/app/client/clients-page/client-home/client-home.component.html
+++ b/src/app/client/clients-page/client-home/client-home.component.html
@@ -98,7 +98,7 @@
                         </ul>
                         <ul class="pagination">
                             <li class="page-item">
-                              <a class="page-link" href="#" aria-label="Previous">
+                              <a class="page-link" aria-label="Previous">
                                 <span aria-hidden="true">&laquo;</span>
                                 <span class="sr-only">Previous</span>
                               </a>
@@ -107,7 +107,7 @@
                                 <a class="page-link" routerLink="/" (click)="onPage(item)">{{item+1}}</a>
                             </li>
                             <li class="page-item">
-                              <a class="page-link" href="#" aria-label="Next">
+                              <a class="page-link" aria-label="Next">
                                 <span aria-hidden="true">&raquo;</span>
                                 <span class="sr-only">Next</span>
                               </a>
