--- a/src/app/client/clients-page/client-blog/client-blog.component.html
+++ b/src/app/client/clients-page/client-blog/client-blog.component.html
@@ -41,7 +41,7 @@
                         <!-- Pagination -->
                         <ul class="pagination">
                             <li class="page-item">
-                              <a class="page-link" href="#" aria-label="Previous">
+                              <a class="page-link" aria-label="Previous">
                                 <span aria-hidden="true">&laquo;</span>
                                 <span class="sr-only">Previous</span>
                               </a>
@@ -50,7 +50,7 @@
                                 <a class="page-link" routerLink="/blog" (click)="onPage(item)">{{item+1}}</a>
                             </li>
                             <li class="page-item">
-                              <a class="page-link" href="#" aria-label="Next">
+                              <a class="page-link" aria-label="Next">
                                 <span aria-hidden="true">&raquo;</span>
                                 <span class="sr-only">Next</span>
                               </a>
