--- a/src/app/client/clients-page/client-rent-room/client-rent-room.component.html
+++ b/src/app/client/clients-page/client-rent-room/client-rent-room.component.html
@@ -32,44 +32,56 @@
                         </div>
                         <div class="post-sort"><span>Sắp xếp: </span><a rel="nofollow" class="active" href="https://phongtro123.com/tinh-thanh/ha-noi">Mặc định</a><a rel="nofollow" class="" href="https://phongtro123.com/tinh-thanh/ha-noi?orderby=moi-nhat">Mới nhất</a><a rel="nofollow"
                                 class="" href="https://phongtro123.com/tinh-thanh/ha-noi?orderby=video">Có video</a></div>
-                        <ul class="post-listing clearfix">
-                            <li class="post-item clearfix tin-vip vip1" style="border-color: #E13427;" post-id="585635">
-                                <figure>
-                                    <a href="https://phongtro123.com/phong-khep-kin-tien-nghi-du-noi-that-gan-ho-tay-chi-tu-2tr7-pr585635.html"><img class="lazy_done" src="./Cho Thuê Phòng Trọ Hà Nội, Giá Rẻ, Tiện Nghi, Mới Nhất 2021_files/untitled_1618217244.png" data-src="https://static123.com/phongtro123/uploads/images/thumbs/450x300/fit/2021/04/12/untitled_1618217244.png"
-                                            alt="Phòng khép kín tiện nghi đủ nội thất gần Hồ Tây chỉ từ 2tr7" height="100" width="100" layout="responsive" data-loaded="true"></a><span class="images-number">5 ảnh</span><span class="chothuenhanh-label"></span>
-                                    <span class="post-save js-btn-save" data-post-id="585635" title="Lưu tin này vào danh sách quan tâm"><i></i></span>
-                                </figure>
-                                <div class="post-meta">
-                                    <h3 class="post-title"><a style="color: #E13427;" href="https://phongtro123.com/phong-khep-kin-tien-nghi-du-noi-that-gan-ho-tay-chi-tu-2tr7-pr585635.html"><span
-                                                class="star star-4"></span> Phòng khép kín tiện nghi đủ nội thất gần Hồ
-                                            Tây chỉ từ 2tr7 </a></h3>
-                                    <div class="meta-row clearfix"><span class="post-price">2.7 triệu/tháng</span><time class="post-time">Cập nhật: 8 giờ trước</time></div>
-                                    <div class="meta-row clearfix"><span class="post-acreage">20m²</span><span class="post-location"><a
-                                                href="https://phongtro123.com/tinh-thanh/ha-noi/quan-tay-ho"
-                                                title="Cho thuê Phòng trọ Quận Tây Hồ, Hà Nội">Quận Tây Hồ, Hà
-                                                Nội</a></span></div>
-                                    <p class="post-summary">CHÍNH CHỦ CHO THUÊ (không qua môi giới)Địa chỉ: Số 81C Thụy Khuê, Tây Hồ, Hà Nội+ Vị trí thuận tiện:Mặt đường Thụy Khuê (đường 2 chiều, thuận…
-                                    </p>
-                                </div>
-                            </li>
-                           
-                        </ul>
+                                <ul class="post-listing clearfix">
+                                    <li class="post-item clearfix tin-vip vipnoibat" style="border-color: #E13427;"
+                                        post-id="585160" *ngFor="let article of article">
+                                        <figure><a routerLink="/detail-article/{{article.articleId}}">
+                                            <img class="lazy_done"
+                                                    src="{{article.image}}"
+                                                    alt="" height="100"
+                                                    width="100" layout="responsive"></a>
+                                                    <span class="images-number">{{(article.image.split(',')).length}} ảnh</span>
+                                                    <span *ngIf="article.liked === false" class="post-save js-btn-save" data-post-id="585180" title="Lưu tin" (click)="onFavorite(article)">
+                                                        <i></i>{{article.countLike}}
+                                                    </span>
+                                                    <span *ngIf="article.liked === true" class="post-save1 js-btn-save" data-post-id="585180" title="Bỏ lưu tin" (click)="onFavorite(article)">
+                                                        <i></i>{{article.countLike}}
+                                                    </span>
+                                        </figure>
+                                        <div class="post-meta">
+                                            <h4 class="post-title2"><a style="color: #E13427;" routerLink="/detail-article/{{article.articleId}}">
+                                             {{article.title}}</a>
+                                             <span class="star star-5" *ngIf="article.vip == true"></span></h4>
+                                            <div class="meta-row clearfix"><span class="post-price">3.3 triệu/tháng</span><time
+                                                    class="post-time">Cập nhật: {{article.lastUpdateTime | date:'dd/MM/yyyy HH:mm'}}</time></div>
+                                            <div class="meta-row clearfix"><span class="post-acreage">{{article.acreage}}m²</span><span
+                                                    class="post-location">
+                                                    <a title="{{article.title}}">{{article.address}}</a></span></div>
+                                                        <span class="post-hot"></span>
+                                            <div class="post-summary">Nhà có 2 phòng: Diện tích:- Phòng 1: 20m2- Phòng 2: 25m2
+                                                Tiện nghi của 2 phòng:- Máy lạnh- Máy nước nóng lạnh- Bếp riêng trong phòng- WC
+                                                riêng trong…</div>
+                                        </div>
+                                    </li>
+                                </ul>
                         <!-- Pagination -->
                         <ul class="pagination">
-                            <li class="page-item disabled"><span class="page-link">«</span></li>
-                            <li class="page-item active"><span class="page-link">1</span></li>
-                            <li class="page-item"><a class="page-link" href="https://phongtro123.com/tinh-thanh/ha-noi?page=2">2</a></li>
-                            <li class="page-item"><a class="page-link" href="https://phongtro123.com/tinh-thanh/ha-noi?page=3">3</a></li>
-                            <li class="page-item"><a class="page-link" href="https://phongtro123.com/tinh-thanh/ha-noi?page=4">4</a></li>
-                            <li class="page-item"><a class="page-link" href="https://phongtro123.com/tinh-thanh/ha-noi?page=5">5</a></li>
-                            <li class="page-item"><a class="page-link" href="https://phongtro123.com/tinh-thanh/ha-noi?page=6">6</a></li>
-                            <li class="page-item"><a class="page-link" href="https://phongtro123.com/tinh-thanh/ha-noi?page=7">7</a></li>
-                            <li class="page-item"><a class="page-link" href="https://phongtro123.com/tinh-thanh/ha-noi?page=8">8</a></li>
-                            <li class="page-item disabled"><span class="page-link">...</span></li>
-                            <li class="page-item"><a class="page-link" href="https://phongtro123.com/tinh-thanh/ha-noi?page=223">223</a></li>
-                            <li class="page-item"><a class="page-link" href="https://phongtro123.com/tinh-thanh/ha-noi?page=224">224</a></li>
-                            <li class="page-item"><a class="page-link" href="https://phongtro123.com/tinh-thanh/ha-noi?page=2" rel="next">»</a></li>
-                        </ul>
+                            <li class="page-item">
+                              <a class="page-link" aria-label="Previous">
+                                <span aria-hidden="true">&laquo;</span>
+                                <span class="sr-only">Previous</span>
+                              </a>
+                            </li>
+                            <li class="page-item" *ngFor="let item of arrayPage">
+                                <a class="page-link" routerLink="/rent-room" (click)="onPage(item)">{{item+1}}</a>
+                            </li>
+                            <li class="page-item">
+                              <a class="page-link" aria-label="Next">
+                                <span aria-hidden="true">&raquo;</span>
+                                <span class="sr-only">Next</span>
+                              </a>
+                            </li>
+                          </ul>
                     </section>
                 </div>
 
