--- a/src/app/client/clients-page/shared/searchbar/searchbar.component.html
+++ b/src/app/client/clients-page/shared/searchbar/searchbar.component.html
@@ -38,31 +38,29 @@
                     <div class="search_field_item search_field_item_mucgia">
                         <label class="search_field_item_label">Khoảng giá</label>
                         <select class="form-control price js_select2_price" name="price">
-                            <option value="0" selected="">Chọn mức giá</option>
-                            <option value="1">Dưới 1 triệu</option>
-                            <option value="2">1 triệu - 2 triệu</option>
-                            <option value="3">2 triệu - 3 triệu</option>
-                            <option value="4">3 triệu - 5 triệu</option>
-                            <option value="5">5 triệu - 7 triệu</option>
-                            <option value="6">7 triệu - 10 triệu</option>
-                            <option value="7">10 triệu - 15 triệu</option>
-                            <option value="8">Trên 15 triệu</option>
+                            <option value="0" selected="">Từ</option>
+                            <option value="1">1 triệu</option>
+                            <option value="2">2 triệu</option>
+                            <option value="3">3 triệu</option>
+                            <option value="4">4 triệu</option>
+                            <option value="5">5 triệu</option>
+                            <option value="10">10 triệu</option>
                         </select>
                     </div>
                         
                     <div class="search_field_item search_field_item_dientich"><label
-                            class="search_field_item_label">Diện tích</label><select id="search_dientich"
+                            class="search_field_item_label" [ngStyle]="{'color':'yellow'}">-</label><select id="search_dientich"
                             name="acreage" class="form-control js_select2_acreage">
-                            <option value="0" selected="">Chọn diện tích</option>
-                            <option value="1">Dưới 20 m2</option>
-                            <option value="2">20 - 30 m2</option>
-                            <option value="3">30 - 50 m2</option>
-                            <option value="4">50 - 60 m2</option>
-                            <option value="5">60 - 70 m2</option>
-                            <option value="6">70 - 80 m2</option>
-                            <option value="7">80 - 90 m2</option>
-                            <option value="8">90 - 100 m2</option>
-                            <option value="9">Trên 100 m2</option>
+                            <option value="0" selected="">Đến</option>
+                            <option value="2">2 triệu</option>
+                            <option value="3">3 triệu</option>
+                            <option value="4">4 triệu</option>
+                            <option value="5">5 triệu</option>
+                            <option value="6">6 triệu</option>
+                            <option value="8">8 triệu</option>
+                            <option value="10">10 triệu</option>
+                            <option value="20">20 triệu</option>
+                            <option value="50">50 triệu</option>
                         </select>
                     </div>
 
