--- a/src/app/client/profiles/recharge-history/recharge-history.component.html
+++ b/src/app/client/profiles/recharge-history/recharge-history.component.html
@@ -51,7 +51,7 @@
                         <nav aria-label="Page navigation example">
                             <ul class="pagination">
                               <li class="page-item">
-                                <a class="page-link" href="#" aria-label="Previous">
+                                <a class="page-link" aria-label="Previous">
                                   <span aria-hidden="true">&laquo;</span>
                                   <span class="sr-only">Previous</span>
                                 </a>
@@ -60,7 +60,7 @@
                                   <a class="page-link" routerLink="/profile/recharge-history" (click)="onPage(item)">{{item+1}}</a>
                               </li>
                               <li class="page-item">
-                                <a class="page-link" href="#" aria-label="Next">
+                                <a class="page-link" aria-label="Next">
                                   <span aria-hidden="true">&raquo;</span>
                                   <span class="sr-only">Next</span>
                                 </a>
