share view staff

--- a/src/app/admin/staff-manager/view-staff/view-staff.component.html
+++ b/src/app/admin/staff-manager/view-staff/view-staff.component.html
@@ -8,8 +8,8 @@
 
                     <div class="btn-toolbar mb-2 mb-md-0">
                         <div id="hic">
-                            <div id="demo-2">
-                                <input type="search" placeholder="Tìm kiếm" (keyup)="onChange($event)" style="border: 1px solid #e6e6e6;">
+                            <div id="demo-2" >
+                                <input class="search" type="search" placeholder="Tìm kiếm nhân viên" (keyup)="onChange($event)" style="border: 1px solid #e6e6e6;">
                             </div>
                         </div>
                         <div class="dropdown mr-1">
