--- a/src/app/admin/staff-manager/view-staff/view-staff.component.css
+++ b/src/app/admin/staff-manager/view-staff/view-staff.component.css
@@ -458,3 +458,11 @@ table.table td a.edit {
 table.table td a.delete {
   color: #E34724;
 }
+
+/*  */
+.search{
+  height: 36px;
+  width: 230px;
+    margin-right: 8px;
+   border-radius: 31px;
+}
